--- a/plot/index.html
+++ b/plot/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <style> /* set the CSS */
 
-body { font: 12px Arial;}
+body { font: 16px Arial;}
 
 path { 
     stroke: steelblue;
@@ -20,13 +20,14 @@ path {
     clip-path: url(#clip);
 }
 
+.axis { font: 16px Arial; }
 .overlay {
   fill: none;
   pointer-events: all;
 }
 
 .focus circle {
-  fill: none;
+  fill: steelblue;
   stroke: steelblue;
 }
 
@@ -39,7 +40,7 @@ path {
 </style>
 <body>
 <svg width="960" height="600"></svg>
-<script src="packages/d3/d3.min.js"></script>
+<script src="../packages/d3/d3.min.js"></script>
 
 <!-- load the d3.js library -->    
 <script>
@@ -47,7 +48,7 @@ path {
 // Defines attributes of svg element
 var svg = d3.select("svg"),
 margin = {top: 30, right: 50, bottom: 100, left: 50},
-margin2 = {top: 530, right: 50, bottom: 20, left: 50},
+margin2 = {top: 530, right: 50, bottom: 30, left: 50},
 width   = +svg.attr("width") - margin.left - margin.right,
 height  = +svg.attr("height") - margin.top - margin.bottom,
 height2 = +svg.attr("height") - margin2.top - margin2.bottom;
@@ -102,7 +103,7 @@ var context = svg.append("g")
     .attr("transform", "translate(" + margin2.left + "," + margin2.top + ")");
 
 // Get the data
-d3.json("php/data.php", function(error, data) {
+d3.json("../php/data.php", function(error, data) {
 
     data.forEach(function(d) {
         d.timestamp = parseDate(d.timestamp);
@@ -111,8 +112,8 @@ d3.json("php/data.php", function(error, data) {
 
     // Scale the range of the data
     x.domain(d3.extent(data, function(d) { return d.timestamp; }));
-    y.domain([d3.min(data, function(d) { return d.temperature; }) - 5.0, 
-	      d3.max(data, function(d) { return d.temperature; }) + 5.0]);
+    y.domain([d3.min(data, function(d) { return d.temperature; }) - 2.0, 
+	      d3.max(data, function(d) { return d.temperature; }) + 2.0]);
 //    y.domain([0, 
     x2.domain(x.domain());
     y2.domain(y.domain());
