--- a/index.html
+++ b/index.html
@@ -1,69 +1,164 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Temperature logging</title>
 
-    <!-- Bootstrap -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!DOCTYPE html>
+<meta charset="utf-8">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <style>
-      body {
-      padding-top: 50px;
-      }
-      .starter-template {
-      padding: 40px 15px;
-      text-align: center;
-      }
-    </style>
-</head>
+<link href="css/styles.css" rel="stylesheet">
 
 <body>
+<svg width="960" height="600"></svg>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+<!-- load the d3.js library -->    
+<script src="../packages/d3/d3.min.js"></script>
+<script>
 
-    <div class="container">
+// Defines attributes of svg element
+var svg = d3.select("svg"),
+margin = {top: 30, right: 50, bottom: 100, left: 50},
+margin2 = {top: 530, right: 50, bottom: 30, left: 50},
+width   = +svg.attr("width") - margin.left - margin.right,
+height  = +svg.attr("height") - margin.top - margin.bottom,
+height2 = +svg.attr("height") - margin2.top - margin2.bottom;
 
-      <div class="starter-template">
-        <h1>Remote temperature logging</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
+// Parse the date / time
+var parseDate = d3.timeParse('%Y-%m-%d %H:%M:%S');
+var bisectDate = d3.bisector(function(d) { return d.timestamp; }).left,
+    formatValue = d3.format(".2f")
 
-    </div><!-- /.container -->
+// Set the ranges
+var x  = d3.scaleTime().range([0, width]), 
+    x2 = d3.scaleTime().range([0, width]),
+    y  = d3.scaleLinear().range([height, 0]),
+    y2 = d3.scaleLinear().range([height2, 0]);
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-</body> </html>
+// Define the axes
+var xAxis  = d3.axisBottom(x).ticks(5),
+    xAxis2 = d3.axisBottom(x2).ticks(5),
+    yAxis  = d3.axisLeft(y).ticks(5);
+
+var brush = d3.brushX(x2)
+    .extent([[0,0], [width, height2]])
+    .on("brush end", brushed);
+
+// Define the line
+var valueline = d3.line()
+    .curve(d3.curveMonotoneX)
+    .x(function(d) { return x(d.timestamp); })
+    .y(function(d) { return y(d.temperature); });
+
+// Define the line
+var valueline2 = d3.line()
+    .curve(d3.curveMonotoneX)
+    .x(function(d) { return x2(d.timestamp); })
+    .y(function(d) { return y2(d.temperature); });
+    
+
+
+svg.append("defs").append("clipPath")
+    .attr("id", "clip")
+    .append("rect")
+    .attr("width", width)
+    .attr("height", height);
+
+var focus = svg.append("g")
+    .attr("class", "focus")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var context = svg.append("g")
+    .attr("class", "context")
+    .attr("transform", "translate(" + margin2.left + "," + margin2.top + ")");
+
+// Get the data
+d3.json("../php/data.php", function(error, data) {
+
+    data.forEach(function(d) {
+        d.timestamp = parseDate(d.timestamp);
+        d.temperature = +d.temperature;
+    });
+
+    // Scale the range of the data
+    x.domain(d3.extent(data, function(d) { return d.timestamp; }));
+    y.domain([d3.min(data, function(d) { return d.temperature; }) - 2.0, 
+      d3.max(data, function(d) { return d.temperature; }) + 2.0]);
+//    y.domain([0, 
+    x2.domain(x.domain());
+    y2.domain(y.domain());
+
+    // Add the valueline path.
+    focus.append("path")
+.datum(data)
+        .attr("class", "line")
+        .attr("d", valueline);
+
+    // Add the X Axis
+    focus.append("g")
+        .attr("class", "axis x--axis")
+        .attr("transform", "translate(0," + height + ")")
+        .call(xAxis);
+
+    // Add the Y Axis
+    focus.append("g")
+        .attr("class", "axis y--axis")
+        .call(yAxis);
+
+    // Add the valueline path.
+    context.append("path")
+.datum(data)
+        .attr("class", "line")
+        .attr("d", valueline2);
+
+    context.append("g")
+.attr("class", "axis x--axis")
+.attr("transform", "translate(0," + height2 + ")")
+.call(xAxis2);
+
+    context.append("g")
+.attr("class", "x brush")
+.call(brush);
+    
+    var current = focus.append("g")
+.attr("class", "focus")
+.style("display", "none");
+
+    current.append("circle")
+.attr("r", 4.5);
+
+    current.append("text")
+.attr("x", 9)
+.attr("dy", "-.35em");
+
+    svg.append("rect")
+.attr("class", "overlay")
+.attr("width", width)
+.attr("height", height)
+.attr("transform", "translate(" + margin.left + "," + margin.top + ")")
+.on("mouseover", function() { current.style("display", null); })
+.on("mouseout", function() { current.style("display", "none"); })
+.on("mousemove", mousemove);
+
+    function mousemove() {
+var x0 = x.invert(d3.mouse(this)[0]),
+            i = bisectDate(data, x0, 1),
+            d0 = data[i - 1],
+            d1 = data[i],
+            d = x0 - d0.timestamp > d1.timestamp - x0 ? d1 : d0;
+current.attr("transform", "translate(" + x(d.timestamp) + "," + y(d.temperature) + ")");
+current.select("text").text(formatValue(d.temperature));
+    }
+
+});
+
+
+function brushed() {
+//    if (!d3.event.selection) return;
+
+    var s = d3.event.selection || x.range();
+    x.domain(s.map(x2.invert, x2));
+
+    focus.select(".line").attr("d", valueline);
+    focus.select(".x--axis").call(xAxis);
+
+}
+
+</script>
+</body>
