--- a/plot/index.html
+++ b/plot/index.html
@@ -1,57 +1,48 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style> /* set the CSS */
+<link href="../css/styles.css" rel="stylesheet">
 
-body { font: 16px Arial;}
-
-path { 
-    stroke: steelblue;
-    stroke-width: 2;
-    fill: none;
-    clip-path: url(#clip);
-}
-
-.axis path,
-.axis line {
-    fill: none;
-    stroke: grey;
-    stroke-width: 1;
-    shape-rendering: crispEdges;
-    clip-path: url(#clip);
-}
-
-.axis { font: 16px Arial; }
-.overlay {
-  fill: none;
-  pointer-events: all;
-}
-
-.focus circle {
-  fill: steelblue;
-  stroke: steelblue;
-}
-
-.brush .extent {
-  stroke: #fff;
-  fill-opacity: .125;
-  shape-rendering: crispEdges;
-}
-
-</style>
 <body>
-<svg width="960" height="600"></svg>
-<script src="../packages/d3/d3.min.js"></script>
+
+<p></p>
+
+<center>
+  <div class="col-md-2"></div>
+
+  <div class="col-md-8">
+    <div class="row">
+      <div class="panel panel-default">
+	<div class="panel-heading">Living room temperature</div>
+	<div class="panel-body">
+	  <svg width="700" height="600"></svg>
+	</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-2"></div>
+</center>
+
+<p></p>
 
 <!-- load the d3.js library -->    
+<script src="../packages/d3/d3.min.js"></script>
+
+<!-- load jquery -->
+<script src="https://code.jquery.com/jquery-3.1.0.min.js" 
+	integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   
+	crossorigin="anonymous"></script>
+
+
 <script>
 
 // Defines attributes of svg element
 var svg = d3.select("svg"),
 margin = {top: 30, right: 50, bottom: 100, left: 50},
 margin2 = {top: 530, right: 50, bottom: 30, left: 50},
-width   = +svg.attr("width") - margin.left - margin.right,
-height  = +svg.attr("height") - margin.top - margin.bottom,
-height2 = +svg.attr("height") - margin2.top - margin2.bottom;
+width   = svg.attr("width") - margin.left - margin.right,
+height  = svg.attr("height") - margin.top - margin.bottom,
+height2 = svg.attr("height") - margin2.top - margin2.bottom;
 
 // Parse the date / time
 var parseDate = d3.timeParse('%Y-%m-%d %H:%M:%S');
@@ -86,8 +77,6 @@ var valueline2 = d3.line()
     .x(function(d) { return x2(d.timestamp); })
     .y(function(d) { return y2(d.temperature); });
     
-
-
 svg.append("defs").append("clipPath")
     .attr("id", "clip")
     .append("rect")
@@ -114,7 +103,7 @@ d3.json("../php/data.php", function(error, data) {
     x.domain(d3.extent(data, function(d) { return d.timestamp; }));
     y.domain([d3.min(data, function(d) { return d.temperature; }) - 2.0, 
 	      d3.max(data, function(d) { return d.temperature; }) + 2.0]);
-//    y.domain([0, 
+
     x2.domain(x.domain());
     y2.domain(y.domain());
 
